<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pokédex</string>
    <string name="pokemon_name">Pikachu</string>
    <string name="pokemon_number">#025</string>
    <string name="pokemon_type">Eléctrico</string>
    <string name="label_altura">Altura</string>
    <string name="label_peso">Peso</string>
    <string name="label_habilidad">Habilidad</string>
    <string name="value_altura">0,4m</string>
    <string name="value_peso">6,0kg</string>
    <string name="value_habilidad">Elec. Estática</string>
    <string name="pokemon_description">Cuando se enfada, este Pokémon descarga la energía que almacena en el interior de las bolsas de las mejillas.</string>
    <string name="prev_pokemon">Arbok N.º 0024</string>
    <string name="next_pokemon">Raichu N.º 0026</string>
    <string name="nav_prev_arrow">&#8249;</string>
    <string name="nav_next_arrow">&#8250;</string>
    <string name="cd_favorite">Añadir a favoritos</string>
    <string name="cd_pokeball">Pokéball de fondo</string>
    <string name="cd_pikachu">Imagen de Pikachu</string>
    <string name="cd_prev_pokemon">Pokémon anterior</string>
    <string name="cd_next_pokemon">Pokémon siguiente</string>
</resources>